# Netology

./: .gitignore  README.md
Advanced_programming _in_CPP/Lesson08/Cloning_class_object/: CMakeLists.txt
Advanced_programming _in_CPP/Lesson08/Task1/src/: CMakeLists.txt
Advanced_programming _in_CPP/Lesson08/Task2/src/: CMakeLists.txt  elimination_of_the_intersection
Advanced_programming _in_CPP/Lesson09/Task1/: CMakeLists.txt
Design_patterns_in_CPP/Lesson01/Task2/: generating_patterns2
Design_patterns_in_CPP/Lesson02/Task1/: StructuralTemplatesProxyDecoratorAdapter
Design_patterns_in_CPP/Lesson02/Task1/src/: CMakeLists.txt  StructuralTemplatesProxyDecoratorAdapter.cpp
Design_patterns_in_CPP/Lesson02/Task2/: VeryHeavyDatabase
Design_patterns_in_CPP/Lesson04/Task1/: readme.md
Design_patterns_in_CPP/Lesson04/Task2/: output.txt  printable
Multithreaded_and_asynchronous_programming/Lesson01/Task1/: customers
Multithreaded_and_asynchronous_programming/Lesson01/Task2/: parallel
Multithreaded_and_asynchronous_programming/Lesson02/Task1/: automatic_queue
Multithreaded_and_asynchronous_programming/Lesson02/Task2/: progress_bar
Multithreaded_and_asynchronous_programming/Lesson02/Task3/: secure_data_exchange
Multithreaded_and_asynchronous_programming/Lesson03/Task1/: sorting_selection
Multithreaded_and_asynchronous_programming/Lesson03/Task2/: for_each
Multithreaded_and_asynchronous_programming/Lesson04/Task1/: readme.md  shape.cpp  shape.h  transform.cpp  transform.h
Multithreaded_and_asynchronous_programming/Lesson05/Task1/: Dockerfile
(+130 files in other folders)
